# setup-environment-emfEpsilon

./: CMakeLists.txt  Doxyfile  README.md
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: greetings.h  logic.h
lib/mydynlib/: CMakeLists.txt
lib/mydynlib/include/: mydynlib.h
lib/mydynlib/src/: mydynlib.c
lib/mystatlib/: CMakeLists.txt
lib/mystatlib/include/: mystatlib.h
lib/mystatlib/src/: mystatlib.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
